--- a/estulo.css
+++ b/estulo.css
@@ -7,16 +7,25 @@ body {
     font-size: 16px;
     margin: 0%;
     padding: 0%;
+    background-color: turquoise;
 }
 
 #container {
+    background-color: aqua;
     width: 70%;
     padding: 1em;
     text-align: center;
     border: 1px solid #ddd;
     margin: 0 auto;
+    color: blue;
 }
 
 #container h1 {
+    color: navy;
+    font-size: 20px;
+}
+
+#container p {
+    color: blueviolet;
     font-size: 20px;
 }
